--- a/files/html.htm
+++ b/files/html.htm
@@ -1191,6 +1191,11 @@
 											></a>
 											{% ENDIF %}
 										</div>
+
+										<a style="display: none;" class="quickview" href="{index_page_goods.URL_MIN_PRICE_NOW | url_amp}" title="{index_page_goods.NAME}">
+											<i class="icon-loupe"></i>
+										</a>
+
 									</div>
 								</div>
 							</form>
