--- a/files/goods.htm
+++ b/files/goods.htm
@@ -279,7 +279,7 @@
 								data-tooltipOFF="Добавить в сравнение"
 								data-action-text-add="В Сравнение"
 								data-action-text-del="В Сравнении"
-								title="Убрать &laquo;{GOODS_NAME}&raquo; из списка сравнения с другими товарами"
+								title="Добавить &laquo;{GOODS_NAME}&raquo; в список сравнения с другими товарами"
 								href="{COMPARE_ADD_URL}?id={GOODS_MOD_ID}&amp;return_to={CURRENT_URL | urlencode}"
 								rel="nofollow"
 							><span>В сравнение</span></a>
