--- a/files/order.htm
+++ b/files/order.htm
@@ -43,7 +43,7 @@
         </div>
         <div class="text-italic">Зарегистрируйтесь для дальнейшего удобства</div>
         <div class="form__fields form__register flex">
-          <input type="checkbox" class="square" id="form__registration" name="form[contact][want_register]" value="1" {% IF ORDER_FORM_CONTACT_WANT_REGISTER %}checked="checked"{% ENDIF %}>
+          <input class="square" type="checkbox" id="form__registration" name="form[contact][want_register]" value="1" {% IF ORDER_FORM_CONTACT_WANT_REGISTER %}checked="checked"{% ENDIF %}>
           <label for="form__registration"><span>Я хочу зарегистрироваться</span></label>
         </div>
       </div>
